test: fixing integration tests